# ICOS-CP2ERDDAP

./: .gitignore  AUTHORS  CHECKONTOLOGY.md  ChangeLog  DataObj.py  DataSubmission.py  GeoRegion.py  ICPObj.py  LICENSE  PACKAGE.md  README.md  Station.py  changelog  chgCsv.py  chgXml.py  chgXml.py.bak  csv4Erddap.py  main.py  requirements.txt  setup.cfg  setup.py  tox.ini  wrapper.py
Dataset/: header.xml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
icp2edd/: DataObj.py  DataSubmission.py  GeoRegion.py  ICPObj.py  Station.py  SuperICPObj.py  Xml4Erddap.py  __init__.py  __main__.py  case.py  checkOntology.py  config_default.yaml  csv4Erddap.py  icpObj.py  icpOnto.py  main.py  parameters.py  setup.py  setupcfg.py  superIcpObj.py  timing.py  util.py  xml4Erddap.py
icp2edd/cfg/: config_default.yaml  logging.yaml  parameters.yaml
icp2edd/cpmeta/: __init__.py  ancillaryDatum.py  ancillaryEntry.py  ancillaryValue.py  as.py  atmoStation.py  atmosphericStation.py  centralFacility.py  climateZone.py  collection.py  dataAcquisition.py  dataObject.py  dataObjectSpec.py  dataObjectSpecifyingThing.py  dataProduction.py  dataSubmission.py  dataTheme.py  datasetColumn.py  datasetSpec.py  datasetVariable.py  documentObject.py  ecosystemStation.py  ecosystemType.py  es.py  fluxnetStation.py  funder.py  funding.py  icosStation.py  ingosStation.py  instrument.py  latLonBox.py  membership.py  neonStation.py  objectEncoding.py  objectFormat.py  oceanStation.py  organization.py  os.py  person.py  position.py  (+19 more)
requirements/: dev.txt
(+106 files in other folders)
