[metadata]
name = icp2edd
author = Julien Paul, University of Bergen and Bjerknes Climate Data Centre
author-email = julien.paul@uib.no
summary = transfer ICOS Carbon Portal data and metadata to ERDDAP
credits =
maintainer = BCDC
description-file = README.md
home-page = https://github.com/BjerknesClimateDataCentre/ICOS-CP2ERDDAP.git
license = CC BY-SA 4.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Operating System :: Unix
    Programming Language :: Python
keywords =
    erddap
    icos

[entry_points]
console_scripts =
    icp2edd = icp2edd.__main__:main

[files]
packages =
    icp2edd
